src/tests/resources/players/valid/numberFirstnameLastname.players
01 Андрей Иванов
02 Артем Петров
03 Влад Сидоров
04 Слава Трубицин
05 Костя Мозговой