src/tests/resources/players/invalid/wrongOrderArguments_2.players
Андрей Иванов B 01
Артем Петров G 02
Влад Сидоров B 03
Слава Трубицин B 04
Костя Мозговой G 05